--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
     "typia": "^5.3.8",
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.38.0"
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.41.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "ts-patch": "^3.1.1",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.2",
     "vitest": "^1.1.3",
     "xo": "^0.56.0"
