--- a/package.json
+++ b/package.json
@@ -16,18 +16,16 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.31.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "fastify": "^4.26.2",
     "file-type": "^18.7.0",
     "jose": "^5.1.3",
     "mongoose": "^8.0.3",
     "nanoid": "^5.0.4",
     "snowflake-id": "github:spitliner/snowflake-id",
     "socket.io": "^4.7.3",
-    "socket.io-client": "^4.7.3",
     "typia": "^5.3.8",
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.41.0"
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.43.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
