--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/formbody": "^7.4.0",
     "argon2": "^0.31.2",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
